@@ -1,3 +1,8 @@
+2003-02-11  Andras Varga
+
+	* distrib.cc: bugfix in beta()
+	* cexception.h: added missing includes string.h and stdarg.h
+
 2003-02-10  Andras Varga
 
 	* chist.cc: cEqdHistogramBase: collectTransformed() and pdf() made 
